<resources>
    <string name="app_name">RigoLingo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_signup_prompt">Don\'t have an account? Sign up here</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration_failed">Registration failed</string>
    
    <!-- Avatar and Profile -->
    <string name="action_avatar">Avatar</string>
    <string name="action_profile">Profile</string>
    <string name="action_view_profile">View Profile</string>
    <string name="action_logout">Logout</string>
    
    <!-- Profile Screen -->
    <string name="profile_settings_title">Profile Settings</string>
    <string name="profile_info_title">Profile Information</string>
    <string name="security_title">Security</string>
    <string name="language_settings_title">Language Settings</string>
    
    <!-- Labels -->
    <string name="label_display_name">Display Name</string>
    <string name="label_email">Email</string>
    <string name="label_app_language">App Language</string>
    
    <!-- Buttons -->
    <string name="button_edit">Edit</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_back">Back</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_select">Select</string>
    
    <!-- Hints -->
    <string name="hint_display_name">Enter your display name</string>
    <string name="hint_current_password">Current password</string>
    <string name="hint_new_password">New password (min 6 characters)</string>
    <string name="hint_confirm_password">Confirm new password</string>
    
    <!-- Dialog Titles -->
    <string name="dialog_edit_name_title">Edit Display Name</string>
    <string name="dialog_change_password_title">Change Password</string>
    <string name="dialog_select_language_title">Select Language</string>
    
    <!-- Languages -->
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_spanish">Spanish</string>
    
    <!-- Success Messages -->
    <string name="success_name_updated">Display name updated successfully</string>
    <string name="success_password_changed">Password changed successfully</string>
    
    <!-- Messages -->
    <string name="message_settings_coming_soon">Settings coming soon!</string>

    <!-- Home Screen -->
    <string name="home_welcome_title">Welcome, %s!</string>
    <string name="home_welcome_title_default">Welcome back!</string>
    <string name="home_welcome_message">Ready to continue learning?</string>
    <string name="home_day_streak">Day Streak</string>
    <string name="home_total_xp">Total XP</string>
    <string name="home_today_progress">Today\'s Progress</string>
    <string name="home_daily_goal">Daily Goal</string>
    <string name="home_daily_progress_format">%1$d / %2$d lessons</string>
    <string name="home_level_format">🎯 Level %d</string>
    <string name="home_join_date_format">Joined %s</string>
    <string name="home_continue_learning">Continue Learning</string>
    <string name="home_category_basics">Basics</string>
    <string name="home_category_basics_desc">Hello, numbers, family</string>
    <string name="home_category_basics_coming_soon">Basics lessons coming soon! 📚</string>
    <string name="home_category_phrases">Phrases</string>
    <string name="home_category_phrases_desc">Common expressions</string>
    <string name="home_category_phrases_coming_soon">Phrases lessons coming soon! 💬</string>
    <string name="home_profile_coming_soon">View full profile coming soon! 📝</string>

    <!-- Error Messages -->
    <string name="error_name_empty">Name cannot be empty</string>
    <string name="error_profile_navigation">Profile navigation error</string>
    <string name="error_current_password_empty">Please enter your current password</string>
    <string name="error_password_too_short">Password must be at least 6 characters</string>
    <string name="error_passwords_dont_match">Passwords do not match</string>
    <string name="error_password_change_failed">Failed to change password. Please try again.</string>
    <string name="error_current_password_incorrect">Current password is incorrect</string>
    <string name="error_user_not_authenticated">User is not authenticated</string>
    <string name="error_name_update_failed">Failed to update display name. Please try again.</string>
    <string name="error_user_not_logged_in">User is not logged in</string>
</resources>